--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,7 @@
             "stopOnEntry": false,
             "pythonPath": "${config:python.pythonPath}",
             "program": "${file}",
+            "cwd": "${workspaceRoot}",
             "args": [
                 "-v"
             ],
