--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,11 @@
         "**/*.sublime-project": true,
         "pyviews.egg-info": true,
         "**/*.py~": true,
-        "**/*.un~": true
-    }
+        "**/*.un~": true,
+        "Include": true,
+        "Lib": true,
+        "Scripts": true,
+        "pip-selfcheck.json": true
+    },
+    "python.pythonPath": "C:/Program Files (x86)/Python36-32/python.exe"
 }
