--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,2 @@
-astroid==1.5.3
-colorama==0.3.9
-isort==4.2.15
-lazy-object-proxy==1.3.1
-mccabe==0.6.1
-pylint==1.7.2
+pylint
 -e .
-six==1.11.0
-wrapt==1.10.11
