--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,5 @@
         "build": true,
         "dist": true
     },
-    "python.pythonPath": "C:\\Program Files\\Python\\python.exe"
+    "python.pythonPath": "C:\\Users\\eugenmisievich\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe"
 }
