--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - -m unittest discover -s pyviews -p *_tests.py
+  - python -m unittest discover -s pyviews -p *_tests.py
