--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - python -m unittest discover -s pyviews -p *_tests.py
 deploy:
   on:
-    branch: release
+    branch: dev
     tags: true
   provider: pypi
   user: $pypi_user
