--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pipenv install
 # command to run tests
 script:
-  - pipenv run python -m unittest discover -s pyviews -p *_tests.py
+  - pipenv run python -m pytest
 deploy:
   on:
     branch: dev
