--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 requests = "*"
 pyviews = {editable = true,path = "."}
+pytest = "*"
 
 [requires]
 python_version = "3.6"
