--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,11 +19,11 @@
         "build": true,
         "dist": true
     },
-    "python.unitTest.pyTestEnabled": false,
-    "python.unitTest.nosetestsEnabled": false,
-    "python.unitTest.unittestEnabled": true,
-    "python.unitTest.cwd": "${workspaceRoot}\\pyviews",
-    "python.unitTest.unittestArgs": [
+    "python.testing.pytestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.unittestEnabled": true,
+    "python.testing.cwd": "${workspaceRoot}\\pyviews",
+    "python.testing.unittestArgs": [
         "-v",
         "-s",
         ".",
