--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,18 @@ dist: xenial
 language: python
 python: 3.7
 # command to install dependencies
+before_install:
+  - sudo apt-get install jq
+  - curl -LSs "$(curl -LSs https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets | map({name, browser_download_url} | select(.name | endswith(".jar"))) | .[0].browser_download_url')" -o codacy-coverage-reporter-assembly.jar
 install:
   - pip install pipenv
   - pipenv install
 # command to run tests
 script:
-  - pipenv run python -m pytest
+  - pipenv run coverage run -m pytest
+  - pipenv run coverage xml
+after_success:
+  - java -jar codacy-coverage-reporter-assembly.jar report -l Python -r coverage.xml
 deploy:
   on:
     branch: dev
