--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pyviews = {editable = true,path = "."}
 pytest = "*"
 injectool = "*"
 pylint = "*"
+coverage = "*"
 
 [requires]
 python_version = "3"
