--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
-name: CI
+name: Release
 
-on: [push]
+on:
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -20,6 +22,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.build.txt
+          pip install pytest
+          pip install build
+          pip install twine
       - name: Test with pytest
         run: |
           pytest
+      - name: Build package
+        if: ${{ success() }}
+        run: |
+          python -m build
+      - name: Publish package
+        if: ${{ success() }}
+        run: |
+          python -m twine upload dist/* -u __token__ -p ${{ secrets.PYPI_TOKEN }}
