--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
-name: CI
+name: Release
 
-on: [push, pull_request]
+on:
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -8,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9"]
+        python-version: ["3.9"]
 
     steps:
       - uses: actions/checkout@v3
@@ -21,13 +23,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.build.txt
           pip install pytest
-          pip install coverage
+          pip install build
+          pip install twine
       - name: Test with pytest
         run: |
-          coverage run -m pytest
-          coverage xml -o cobertura.xml
-      - name: Publish coverage
-        if: ${{ matrix.python-version == 3.9 && success() }}
+          pytest
+      - name: Build package
+        if: ${{ success() }}
         run: |
-          export CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }}
-          bash <(curl -Ls https://coverage.codacy.com/get.sh)
+          python -m build
+      - name: Publish package
+        if: ${{ success() }}
+        run: |
+          python -m twine upload dist/* -u __token__ -p ${{ secrets.PYPI_TOKEN }}
