--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,10 +41,11 @@ python_classes = '*Tests'
 ALLOW_SPLIT_BEFORE_DICT_VALUE = true
 BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
 BLANK_LINES_AROUND_TOP_LEVEL_DEFINITION = 2
+COALESCE_BRACKETS = true
 COLUMN_LIMIT = 120
 DEDENT_CLOSING_BRACKETS = true
 DISABLE_ENDING_COMMA_HEURISTIC = true
-EACH_DICT_ENTRY_ON_SEPARATE_LINE = false
+EACH_DICT_ENTRY_ON_SEPARATE_LINE = true
 INDENT_DICTIONARY_VALUE = true
 JOIN_MULTIPLE_LINES = false
 SPACES_AROUND_DEFAULT_OR_NAMED_ASSIGN = true
