--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ classifiers = [
 ]
 dependencies = [
     'injectool==3.*',
-    'contextvars;python_version<"3.7"'
+    'contextvars;python_version<"3.7"',
+    'dataclasses;python_version<"3.7"'
 ]
 
 [project.urls]
